<resources>
    <string name="app_name">Workout Log</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Dont have an account?<u>Sign up</u>></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="login">Login</string>
    <string name="plan">Plan</string>
    <string name="track">Track</string>
    <string name="person">person</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>